--- a/src/VShop.Web/appsettings.json
+++ b/src/VShop.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ServiceUri": {
+    "ProductApi": "https://localhost:7236"
+  }
 }
