--- a/src/VShop.IdentityServer/appsettings.json
+++ b/src/VShop.IdentityServer/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-DSNQA59\\SQLEXPRESS02;Initial Catalog=VShopIdentityServer;Integrated Security=True; Trust Server Certificate=true;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
