VShop.Web - add serice of authotization in DI

--- a/src/VShop.Web/appsettings.json
+++ b/src/VShop.Web/appsettings.json
@@ -7,6 +7,10 @@
   },
   "AllowedHosts": "*",
   "ServiceUri": {
-    "ProductApi": "https://localhost:7236"
+    "ProductApi": "https://localhost:7236",
+    "IdentityServer": "https://localhost:7107"
+  },
+  "Client": {
+    "Secret": "abracadabra#simsalabim"
   }
 }
