--- a/src/VShop.ProductApi/appsettings.json
+++ b/src/VShop.ProductApi/appsettings.json
@@ -8,5 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "VShop.IdentityServer": {
+    "ApplicationUrl": "https://localhost:7107"
+  }
 }
