VShop.Web - configure CartSercice in DI and his named client

--- a/src/VShop.Web/appsettings.json
+++ b/src/VShop.Web/appsettings.json
@@ -8,7 +8,8 @@
   "AllowedHosts": "*",
   "ServiceUri": {
     "ProductApi": "https://localhost:7236",
-    "IdentityServer": "https://localhost:7107"
+    "IdentityServer": "https://localhost:7107",
+    "CartApi": "https://localhost:7199"
   },
   "Client": {
     "Secret": "abracadabra#simsalabim"
