VShop.Web - finish to implement CouponService and his configurations

--- a/src/VShop.Web/appsettings.json
+++ b/src/VShop.Web/appsettings.json
@@ -9,7 +9,8 @@
   "ServiceUri": {
     "ProductApi": "https://localhost:7236",
     "IdentityServer": "https://localhost:7107",
-    "CartApi": "https://localhost:7199"
+    "CartApi": "https://localhost:7199",
+    "DiscountApi": "https://localhost:7023"
   },
   "Client": {
     "Secret": "abracadabra#simsalabim"
